k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: petstore-backend-service
  namespace: petstore
  labels:
    app: petstore-backend
spec:
  selector:
    app: petstore-backend
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
