k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: petstore-frontend-service
  namespace: petstore
  labels:
    app: petstore-frontend
spec:
  selector:
    app: petstore-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
